# selfrel

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yaml
experiments/: cc_news_relation_candidates.py  cc_news_sentence_distribution.py  cc_news_sentence_lengths.py  self_trainer.py
experiments/models/: clean.sh  export_conll04.py  settings
experiments/models/conll04/: results.tsv
experiments/models/conll04/0.01/: precompute.sh
experiments/models/conll04/0.01/entropy/: entropy-multi-sweep.yaml  entropy-single-sweep.yaml  entropy-sweep-1.yaml  entropy-sweep-2.yaml  entropy-sweep-3.yaml
experiments/models/conll04/0.01/initial_model/: best-initial-model.sh  initial-model-sweep.yaml
experiments/models/conll04/0.01/prediction_confidence/: prediction-confidence-multi-sweep.yaml  prediction-confidence-single-sweep.yaml  prediction-confidence-sweep.yaml
experiments/models/conll04/0.05/: precompute.sh
experiments/models/conll04/0.05/entropy/: entropy-multi-sweep.yaml  entropy-single-sweep.yaml  entropy-sweep-1.yaml  entropy-sweep-2.yaml
experiments/models/conll04/0.05/initial_model/: best-initial-model.sh  initial-model-sweep.yaml
experiments/models/conll04/0.05/prediction_confidence/: prediction-confidence-multi-sweep.yaml  prediction-confidence-single-sweep.yaml  prediction-confidence-sweep.yaml
experiments/models/conll04/0.10/: precompute.sh
experiments/models/conll04/0.10/entropy/: entropy-multi-sweep.yaml  entropy-single-sweep.yaml  entropy-sweep-1.yaml  entropy-sweep-2.yaml  entropy-sweep-3.yaml
experiments/models/conll04/0.10/initial_model/: best-initial-model.sh  initial-model-sweep.yaml
experiments/models/conll04/0.10/prediction_confidence/: prediction-confidence-multi-sweep.yaml  prediction-confidence-single-sweep.yaml  prediction-confidence-sweep.yaml
experiments/models/conll04/1.00/: precompute.sh
experiments/models/conll04/1.00/entropy/: entropy-multi-sweep.yaml  entropy-single-sweep.yaml  entropy-sweep-1.yaml  entropy-sweep-2.yaml
experiments/models/conll04/1.00/initial_model/: best-initial-model.sh  initial-model-sweep.yaml
experiments/models/conll04/1.00/prediction_confidence/: prediction-confidence-multi-sweep.yaml  prediction-confidence-single-sweep.yaml  prediction-confidence-sweep.yaml
experiments/plots/cc_news/: cc_news_relation_candidates.py  cc_news_sentence_lengths.py
experiments/plots/conll04/: conll04_relationship_distribution.py  conll04_sentence_lengths.py  multiple_iterations_results.py  single_iteration_results.py
src/selfrel/: __init__.py  __main__.py  annotate.py  cc_news.py  conllu.py  predictor.py  preprocessing.py  selection_strategies.py  serialization.py  trainer.py
src/selfrel/callbacks/: callback.py  wandb.py
src/selfrel/data/: __init__.py  cc_news.py  conllu.py  serialization.py
src/selfrel/entry_points/: __init__.py  annotate.py  export.py  sweep.py  train.py
src/selfrel/entry_points/descriptions/: annotate.txt  export.txt  train.txt
src/selfrel/entry_points/descriptions/export/: cc_news.txt
src/selfrel/entry_points/export/: cc_news.py  knowledge_base.py  knowledge_base.sql
src/selfrel/entry_points/export/knowledge_base_schema/: in_between_texts.sql  indices.sql  relation_metrics.sql  relation_overview.sql  tables.sql
src/selfrel/resources/entry_descriptions/: cc_news.txt
src/selfrel/resources/entrypoint_descriptions/: export.txt
src/selfrel/utils/: argparse.py  copy.py  garbage_collector.py  inspect_relations.py  iteration.py  sqlite3.py
tests/: __init__.py  conftest.py  test_cli.py  test_predictor.py  test_selection_strategies.py  test_selfrel.py  test_serialization.py  test_trainer.py
tests/data/: test_conllu.py  test_serialization.py
tests/entry_points/: test_annotate.py  test_export.py
tests/entry_points/export/: test_cc_news.py  test_knowledge_base.py
tests/fixtures/: fixture_datasets.py  fixture_ray.py  fixture_resources.py
tests/resources/: cc-news-short.conllup  cc-news.conllup  metadata.json
tests/resources/cc_news/: cc-news-short.conllup
tests/resources/knowledge_base/: relation-overview.tsv
tests/resources/training_data/: support-dataset.conllup  test.conllup  train.conllup
tests/resources/training_data/precomputed/: relation-overview.parquet  support-dataset-full.conllup
tests/utils/: test_inspect_relations.py
