[build-system]
requires = ["setuptools>=56.0", "setuptools_scm[toml]>=6.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/selfrel/_version.py"


[tool.pytest.ini_options]
addopts = "--cov=selfrel"
testpaths = [
    "tests",
]


[tool.mypy]
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
no_implicit_reexport = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "datasets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "syntok.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true


[tool.ruff]
line-length = 120
target-version = "py39"

extend-exclude = ["_version.py"]

select = [
    "F",
    "E",
    "W",
    # "C90",
    "I",
    "N",
    # "D",
    "UP",
    "YTT",
    # "ANN",
    "S",
    "BLE",
    # "FBT",
    "B",
    "A",
    # "COM",
    "C4",
    "DTZ",
    "T10",
    # "DJ",
    "EM",
    # "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    # "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    # "ERA",
    "PD",
    "PGH",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "NPY",
    "RUF",
]

ignore = [
    "S101", # https://beta.ruff.rs/docs/rules/assert/
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments to function call
]

[tool.ruff.isort]
forced-separate = ["selfrel", "tests"]


[tool.black]
line-length = 120
target-version = ['py39', 'py310']
include = '\.pyi?$'
