[metadata]
name = selfrel
dynamic = ["version"]
author = Conrad Dobberstein
author_email = dobberstein.conrad@gmail.com
description = Self-Training for Relation Extraction with Occurrence-Based Selection Strategies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dobbersc/selfrel
# license = MIT
# license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
package_dir =
	=src
packages = find:
python_requires = >=3.9
install_requires =
	importlib-resources
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
dev =
	black==23.3.0
	flake8-pep585==0.1.7
	flake8==6.0
	isort==5.12
	mypy==1.2
	pre-commit==3.2.2
	pytest-cov==4.0
	pytest==7.3.1
	tox==4.4.12

[options.entry_points]
console_scripts =
	selfrel = selfrel.__main__:main

[flake8]
max-line-length = 120
extend-ignore =
# E203: whitespace before ':' (this is to conform with the black code-style)
	E203
