[metadata]
name = selfrel
dynamic = ["version"]
author = Conrad Dobberstein
author_email = dobberstein.conrad@gmail.com
description = Self-Training for Relation Extraction with Occurrence-Based Selection Strategies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dobbersc/selfrel
# license = MIT
# license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
package_dir =
	=src
packages = find:
python_requires = >=3.9
install_requires =
	flair @ git+https://github.com/flairNLP/flair.git@dobbersc-selfrel#egg=flair
	joblib @ git+https://github.com/joblib/joblib.git@master#egg=joblib
	syntok==1.4.4
	ray==2.3.1
	importlib-resources
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
wandb =
	wandb == 0.15.4

experiments =
	seaborn >= 0.12

dev =
	black>=23.3.0
	mypy>=1.0
	pre-commit>=3.2
	pytest>=7.3
	pytest-cov>=4.0
	pytest-mock>=3.0
	ruff>=v0.0.265
	tox>=4.0

	# Type Stubs
	pandas-stubs
	types-regex
	types-tqdm


[options.entry_points]
console_scripts =
	selfrel = selfrel.__main__:main

[flake8]
max-line-length = 120
extend-ignore =
# E203: whitespace before ':' (this is to conform with the black code-style)
	E203
